# vibfit

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
assets/: icon.icns
jupyter/: NION-vib1D-1.ipynb
rampo/: __init__.py  __main__.py
rampo/rampo/: __main__.py  citation.py  rampo.py  version.py
rampo/rampo/control/: basespectrumcontroller.py  ccdcontroller.py  ccdprocesscontroller.py  diffcontroller.py  exportpythoncontroller.py  jcpdscontroller.py  maincontroller.py  mapcontroller.py  mplcontroller.py  peakfitcontroller.py  peakfittablecontroller.py  ramaniohelpers.py  sequencecontroller.py  sessioncontroller.py  waterfallcontroller.py  waterfalltablecontroller.py
rampo/rampo/ds_ccd/: CCDImage.py  __init__.py
rampo/rampo/ds_jcpds/: jcpds.py
rampo/rampo/ds_ramspec/: Spectrum.py  __init__.py  background.py  roiutils.py
rampo/rampo/model/: SpeFile.py  model.py  param_session_io.py
rampo/rampo/utils/: __init__.py  excelutils.py  fileutils.py
rampo/rampo/view/: cakehistwidget.py  mainwidget.py  qtd.py
vibeels/: __init__.py  app.py  processing.py
vibfit/: __init__.py  __main__.py  app.py  version.py
vibfit/assets/: __init__.py
vibfit/control/: __init__.py  maincontroller.py
vibfit/model/: __init__.py  fitting.py  session_io.py  state.py
vibfit/utils/: __init__.py
vibfit/view/: __init__.py  mainwindow.py  mplwidget.py
