[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibfit"
version = "0.1.0"
description = "Qt application for constrained vibEELS peak fitting."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dan Shim" }
]
keywords = ["vibEELS", "EELS", "spectroscopy", "lmfit", "Qt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "hyperspy>=2.0",
  "lmfit>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
  "PyQt6>=6.7",
]

[project.urls]
Homepage = "https://github.com/your-org/vibfit"
Repository = "https://github.com/your-org/vibfit"
Issues = "https://github.com/your-org/vibfit/issues"

[project.gui-scripts]
vibfit = "vibfit.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["vibfit*"]

[tool.setuptools.package-data]
"vibfit.assets" = ["*.png", "*.icns", "*.ico"]
